parser.go
// Package fasturl is a Go URL parser using a [Ragel](http://www.colm.net/open-source/ragel/) state-machine instead of regex, or the built in standard library `url.Parse`.
//
package fasturl

import "fmt"

//line parser.go:11
const url_parser_start int = 45
const url_parser_first_final int = 45
const url_parser_error int = 0

const url_parser_en_main int = 45

//line parser.rl:96

// URL represents the different parts of a parsed URL
type URL struct {
	Protocol string
	Host     string
	Port     string
	Path     string
	Query    string
	Fragment string
}

// ParseURL parses a given URL and returns a `URL` representing the different parts
func ParseURL(data string) (*URL, error) {
	mark, host_mark, port_mark, cs, p, pe, eof := 0, 0, 0, url_parser_en_main, 0, len(data), len(data)

	u := &URL{}

//line parser.go:39
	{
		cs = url_parser_start
	}

//line parser.rl:115

//line parser.go:46
	{
		if p == pe {
			goto _test_eof
		}
		switch cs {
		case 45:
			goto st_case_45
		case 0:
			goto st_case_0
		case 46:
			goto st_case_46
		case 1:
			goto st_case_1
		case 2:
			goto st_case_2
		case 47:
			goto st_case_47
		case 48:
			goto st_case_48
		case 49:
			goto st_case_49
		case 50:
			goto st_case_50
		case 51:
			goto st_case_51
		case 52:
			goto st_case_52
		case 3:
			goto st_case_3
		case 53:
			goto st_case_53
		case 54:
			goto st_case_54
		case 55:
			goto st_case_55
		case 56:
			goto st_case_56
		case 57:
			goto st_case_57
		case 4:
			goto st_case_4
		case 5:
			goto st_case_5
		case 58:
			goto st_case_58
		case 6:
			goto st_case_6
		case 7:
			goto st_case_7
		case 59:
			goto st_case_59
		case 60:
			goto st_case_60
		case 61:
			goto st_case_61
		case 62:
			goto st_case_62
		case 63:
			goto st_case_63
		case 64:
			goto st_case_64
		case 65:
			goto st_case_65
		case 66:
			goto st_case_66
		case 67:
			goto st_case_67
		case 68:
			goto st_case_68
		case 69:
			goto st_case_69
		case 70:
			goto st_case_70
		case 71:
			goto st_case_71
		case 72:
			goto st_case_72
		case 73:
			goto st_case_73
		case 74:
			goto st_case_74
		case 75:
			goto st_case_75
		case 76:
			goto st_case_76
		case 77:
			goto st_case_77
		case 78:
			goto st_case_78
		case 79:
			goto st_case_79
		case 80:
			goto st_case_80
		case 81:
			goto st_case_81
		case 82:
			goto st_case_82
		case 83:
			goto st_case_83
		case 84:
			goto st_case_84
		case 8:
			goto st_case_8
		case 9:
			goto st_case_9
		case 10:
			goto st_case_10
		case 11:
			goto st_case_11
		case 12:
			goto st_case_12
		case 13:
			goto st_case_13
		case 14:
			goto st_case_14
		case 15:
			goto st_case_15
		case 16:
			goto st_case_16
		case 17:
			goto st_case_17
		case 18:
			goto st_case_18
		case 19:
			goto st_case_19
		case 20:
			goto st_case_20
		case 21:
			goto st_case_21
		case 22:
			goto st_case_22
		case 85:
			goto st_case_85
		case 23:
			goto st_case_23
		case 86:
			goto st_case_86
		case 87:
			goto st_case_87
		case 24:
			goto st_case_24
		case 25:
			goto st_case_25
		case 26:
			goto st_case_26
		case 27:
			goto st_case_27
		case 28:
			goto st_case_28
		case 29:
			goto st_case_29
		case 30:
			goto st_case_30
		case 31:
			goto st_case_31
		case 32:
			goto st_case_32
		case 33:
			goto st_case_33
		case 88:
			goto st_case_88
		case 34:
			goto st_case_34
		case 35:
			goto st_case_35
		case 89:
			goto st_case_89
		case 90:
			goto st_case_90
		case 36:
			goto st_case_36
		case 91:
			goto st_case_91
		case 92:
			goto st_case_92
		case 93:
			goto st_case_93
		case 94:
			goto st_case_94
		case 95:
			goto st_case_95
		case 96:
			goto st_case_96
		case 97:
			goto st_case_97
		case 98:
			goto st_case_98
		case 37:
			goto st_case_37
		case 38:
			goto st_case_38
		case 99:
			goto st_case_99
		case 100:
			goto st_case_100
		case 101:
			goto st_case_101
		case 102:
			goto st_case_102
		case 103:
			goto st_case_103
		case 104:
			goto st_case_104
		case 105:
			goto st_case_105
		case 106:
			goto st_case_106
		case 107:
			goto st_case_107
		case 108:
			goto st_case_108
		case 109:
			goto st_case_109
		case 39:
			goto st_case_39
		case 40:
			goto st_case_40
		case 41:
			goto st_case_41
		case 110:
			goto st_case_110
		case 111:
			goto st_case_111
		case 112:
			goto st_case_112
		case 113:
			goto st_case_113
		case 114:
			goto st_case_114
		case 115:
			goto st_case_115
		case 116:
			goto st_case_116
		case 42:
			goto st_case_42
		case 117:
			goto st_case_117
		case 118:
			goto st_case_118
		case 119:
			goto st_case_119
		case 120:
			goto st_case_120
		case 121:
			goto st_case_121
		case 122:
			goto st_case_122
		case 123:
			goto st_case_123
		case 124:
			goto st_case_124
		case 125:
			goto st_case_125
		case 126:
			goto st_case_126
		case 127:
			goto st_case_127
		case 128:
			goto st_case_128
		case 129:
			goto st_case_129
		case 130:
			goto st_case_130
		case 131:
			goto st_case_131
		case 132:
			goto st_case_132
		case 133:
			goto st_case_133
		case 134:
			goto st_case_134
		case 135:
			goto st_case_135
		case 43:
			goto st_case_43
		case 44:
			goto st_case_44
		case 136:
			goto st_case_136
		case 137:
			goto st_case_137
		case 138:
			goto st_case_138
		case 139:
			goto st_case_139
		case 140:
			goto st_case_140
		case 141:
			goto st_case_141
		case 142:
			goto st_case_142
		case 143:
			goto st_case_143
		case 144:
			goto st_case_144
		case 145:
			goto st_case_145
		case 146:
			goto st_case_146
		case 147:
			goto st_case_147
		case 148:
			goto st_case_148
		case 149:
			goto st_case_149
		case 150:
			goto st_case_150
		case 151:
			goto st_case_151
		case 152:
			goto st_case_152
		case 153:
			goto st_case_153
		case 154:
			goto st_case_154
		case 155:
			goto st_case_155
		case 156:
			goto st_case_156
		case 157:
			goto st_case_157
		case 158:
			goto st_case_158
		case 159:
			goto st_case_159
		case 160:
			goto st_case_160
		case 161:
			goto st_case_161
		}
		goto st_out
	st_case_45:
		switch data[p] {
		case 33:
			goto tr14
		case 37:
			goto tr15
		case 47:
			goto tr43
		case 58:
			goto st8
		case 61:
			goto tr14
		case 64:
			goto st11
		case 91:
			goto tr16
		case 92:
			goto tr45
		case 95:
			goto tr14
		case 126:
			goto tr14
		}
		switch {
		case data[p] < 65:
			if 36 <= data[p] && data[p] <= 59 {
				goto tr14
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr44
			}
		default:
			goto tr44
		}
		goto st0
	st_case_0:
	st0:
		cs = 0
		goto _out
	tr14:
//line parser.rl:23

		host_mark = p

		goto st46
	st46:
		if p++; p == pe {
			goto _test_eof46
		}
	st_case_46:
//line parser.go:429
		switch data[p] {
		case 33:
			goto st46
		case 37:
			goto st1
		case 47:
			goto tr47
		case 58:
			goto tr48
		case 61:
			goto st46
		case 64:
			goto st11
		case 92:
			goto tr47
		case 95:
			goto st46
		case 126:
			goto st46
		}
		switch {
		case data[p] < 65:
			if 36 <= data[p] && data[p] <= 59 {
				goto st46
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr49
			}
		default:
			goto tr49
		}
		goto st0
	tr15:
//line parser.rl:23

		host_mark = p

		goto st1
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
//line parser.go:474
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st2
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st2
			}
		default:
			goto st2
		}
		goto st0
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st46
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st46
			}
		default:
			goto st46
		}
		goto st0
	tr45:
//line parser.rl:10
		mark = p
		goto st47
	tr47:
//line parser.rl:27

		u.Host = data[host_mark:p]

//line parser.rl:10
		mark = p
		goto st47
	tr61:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st47
	tr136:
//line parser.rl:27

		u.Host = data[host_mark:p]

//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st47
	st47:
		if p++; p == pe {
			goto _test_eof47
		}
	st_case_47:
//line parser.go:547
		switch data[p] {
		case 35:
			goto tr51
		case 63:
			goto tr52
		}
		switch {
		case data[p] > 46:
			if 48 <= data[p] && data[p] <= 126 {
				goto st48
			}
		case data[p] >= 32:
			goto st48
		}
		goto st0
	tr78:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st48
	st48:
		if p++; p == pe {
			goto _test_eof48
		}
	st_case_48:
//line parser.go:578
		switch data[p] {
		case 35:
			goto tr51
		case 63:
			goto tr52
		}
		if 32 <= data[p] && data[p] <= 126 {
			goto st48
		}
		goto st0
	tr51:
//line parser.rl:37

		if u.Path == "" {
			u.Path = data[mark:p]
		}

		goto st49
	tr56:
//line parser.rl:10
		mark = p
//line parser.rl:31

		if u.Query == "" {
			u.Query = data[mark:p]
		}

		goto st49
	tr58:
//line parser.rl:31

		if u.Query == "" {
			u.Query = data[mark:p]
		}

		goto st49
	st49:
		if p++; p == pe {
			goto _test_eof49
		}
	st_case_49:
//line parser.go:620
		if 32 <= data[p] && data[p] <= 126 {
			goto tr53
		}
		goto st0
	tr53:
//line parser.rl:10
		mark = p
		goto st50
	st50:
		if p++; p == pe {
			goto _test_eof50
		}
	st_case_50:
//line parser.go:634
		if 32 <= data[p] && data[p] <= 126 {
			goto st50
		}
		goto st0
	tr52:
//line parser.rl:37

		if u.Path == "" {
			u.Path = data[mark:p]
		}

		goto st51
	st51:
		if p++; p == pe {
			goto _test_eof51
		}
	st_case_51:
//line parser.go:652
		if data[p] == 35 {
			goto tr56
		}
		switch {
		case data[p] < 48:
			if 32 <= data[p] && data[p] <= 46 {
				goto tr55
			}
		case data[p] > 62:
			if 64 <= data[p] && data[p] <= 126 {
				goto tr55
			}
		default:
			goto tr55
		}
		goto st0
	tr55:
//line parser.rl:10
		mark = p
		goto st52
	st52:
		if p++; p == pe {
			goto _test_eof52
		}
	st_case_52:
//line parser.go:678
		if data[p] == 35 {
			goto tr58
		}
		switch {
		case data[p] < 48:
			if 32 <= data[p] && data[p] <= 46 {
				goto st52
			}
		case data[p] > 62:
			if 64 <= data[p] && data[p] <= 126 {
				goto st52
			}
		default:
			goto st52
		}
		goto st0
	tr48:
//line parser.rl:27

		u.Host = data[host_mark:p]

		goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
//line parser.go:706
		switch data[p] {
		case 33:
			goto tr4
		case 37:
			goto tr5
		case 60:
			goto tr3
		case 62:
			goto tr3
		case 64:
			goto tr6
		case 95:
			goto tr4
		case 126:
			goto tr4
		}
		switch {
		case data[p] < 65:
			switch {
			case data[p] < 36:
				if 32 <= data[p] && data[p] <= 34 {
					goto tr3
				}
			case data[p] > 46:
				if 48 <= data[p] && data[p] <= 61 {
					goto tr4
				}
			default:
				goto tr4
			}
		case data[p] > 90:
			switch {
			case data[p] < 97:
				if 91 <= data[p] && data[p] <= 96 {
					goto tr3
				}
			case data[p] > 122:
				if 123 <= data[p] && data[p] <= 125 {
					goto tr3
				}
			default:
				goto tr4
			}
		default:
			goto tr4
		}
		goto st0
	tr3:
//line parser.rl:11
		port_mark = p
		goto st53
	tr121:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st53
	tr201:
//line parser.rl:11
		port_mark = p
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st53
	st53:
		if p++; p == pe {
			goto _test_eof53
		}
	st_case_53:
//line parser.go:785
		switch data[p] {
		case 37:
			goto st74
		case 47:
			goto tr61
		case 64:
			goto st54
		case 92:
			goto tr63
		}
		switch {
		case data[p] < 65:
			switch {
			case data[p] > 34:
				if 36 <= data[p] && data[p] <= 62 {
					goto st54
				}
			case data[p] >= 32:
				goto st54
			}
		case data[p] > 90:
			switch {
			case data[p] < 97:
				if 91 <= data[p] && data[p] <= 96 {
					goto st54
				}
			case data[p] > 122:
				if 123 <= data[p] && data[p] <= 126 {
					goto st54
				}
			default:
				goto tr62
			}
		default:
			goto tr62
		}
		goto st0
	tr62:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st54
	st54:
		if p++; p == pe {
			goto _test_eof54
		}
	st_case_54:
//line parser.go:838
		switch data[p] {
		case 37:
			goto st68
		case 47:
			goto tr61
		case 64:
			goto st55
		case 92:
			goto tr67
		}
		switch {
		case data[p] < 65:
			switch {
			case data[p] > 34:
				if 36 <= data[p] && data[p] <= 62 {
					goto st55
				}
			case data[p] >= 32:
				goto st55
			}
		case data[p] > 90:
			switch {
			case data[p] < 97:
				if 91 <= data[p] && data[p] <= 96 {
					goto st55
				}
			case data[p] > 122:
				if 123 <= data[p] && data[p] <= 126 {
					goto st55
				}
			default:
				goto tr66
			}
		default:
			goto tr66
		}
		goto st0
	tr66:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st55
	st55:
		if p++; p == pe {
			goto _test_eof55
		}
	st_case_55:
//line parser.go:891
		switch data[p] {
		case 37:
			goto st61
		case 47:
			goto tr61
		case 64:
			goto st56
		case 92:
			goto tr71
		}
		switch {
		case data[p] < 65:
			switch {
			case data[p] > 34:
				if 36 <= data[p] && data[p] <= 62 {
					goto st56
				}
			case data[p] >= 32:
				goto st56
			}
		case data[p] > 90:
			switch {
			case data[p] < 97:
				if 91 <= data[p] && data[p] <= 96 {
					goto st56
				}
			case data[p] > 122:
				if 123 <= data[p] && data[p] <= 126 {
					goto st56
				}
			default:
				goto tr70
			}
		default:
			goto tr70
		}
		goto st0
	tr70:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st56
	tr239:
//line parser.rl:27

		u.Host = data[host_mark:p]

//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st56
	st56:
		if p++; p == pe {
			goto _test_eof56
		}
	st_case_56:
//line parser.go:958
		switch data[p] {
		case 37:
			goto st58
		case 47:
			goto tr61
		case 64:
			goto st57
		case 92:
			goto tr74
		}
		switch {
		case data[p] < 65:
			switch {
			case data[p] > 34:
				if 36 <= data[p] && data[p] <= 62 {
					goto st57
				}
			case data[p] >= 32:
				goto st57
			}
		case data[p] > 90:
			switch {
			case data[p] < 97:
				if 91 <= data[p] && data[p] <= 96 {
					goto st57
				}
			case data[p] > 122:
				if 123 <= data[p] && data[p] <= 126 {
					goto st57
				}
			default:
				goto tr73
			}
		default:
			goto tr73
		}
		goto st0
	st57:
		if p++; p == pe {
			goto _test_eof57
		}
	st_case_57:
		switch data[p] {
		case 47:
			goto tr61
		case 92:
			goto tr61
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr75
			}
		case data[p] >= 65:
			goto tr75
		}
		goto st0
	tr117:
//line parser.rl:27

		u.Host = data[host_mark:p]

//line parser.rl:10
		mark = p
		goto st4
	tr75:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st4
	tr190:
//line parser.rl:27

		u.Host = data[host_mark:p]

//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st4
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
//line parser.go:1053
		if data[p] == 58 {
			goto st5
		}
		goto st0
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		switch data[p] {
		case 47:
			goto st47
		case 92:
			goto st47
		}
		goto st0
	st58:
		if p++; p == pe {
			goto _test_eof58
		}
	st_case_58:
		switch data[p] {
		case 47:
			goto tr61
		case 92:
			goto tr61
		}
		switch {
		case data[p] < 71:
			switch {
			case data[p] > 57:
				if 65 <= data[p] && data[p] <= 70 {
					goto tr77
				}
			case data[p] >= 48:
				goto st6
			}
		case data[p] > 90:
			switch {
			case data[p] > 102:
				if 103 <= data[p] && data[p] <= 122 {
					goto tr75
				}
			case data[p] >= 97:
				goto tr77
			}
		default:
			goto tr75
		}
		goto st0
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st57
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st57
			}
		default:
			goto st57
		}
		goto st0
	tr77:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st7
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
//line parser.go:1137
		if data[p] == 58 {
			goto st5
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st57
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st57
			}
		default:
			goto st57
		}
		goto st0
	tr73:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st59
	tr200:
//line parser.rl:27

		u.Host = data[host_mark:p]

//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st59
	st59:
		if p++; p == pe {
			goto _test_eof59
		}
	st_case_59:
//line parser.go:1183
		switch data[p] {
		case 47:
			goto tr61
		case 58:
			goto st5
		case 92:
			goto tr61
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr75
			}
		case data[p] >= 65:
			goto tr75
		}
		goto st0
	tr74:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st60
	tr146:
//line parser.rl:27

		u.Host = data[host_mark:p]

//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st60
	st60:
		if p++; p == pe {
			goto _test_eof60
		}
	st_case_60:
//line parser.go:1230
		switch data[p] {
		case 35:
			goto tr51
		case 47:
			goto tr61
		case 63:
			goto tr52
		case 91:
			goto st48
		}
		switch {
		case data[p] < 93:
			switch {
			case data[p] > 64:
				if 65 <= data[p] && data[p] <= 92 {
					goto tr78
				}
			case data[p] >= 32:
				goto st48
			}
		case data[p] > 96:
			switch {
			case data[p] > 122:
				if 123 <= data[p] && data[p] <= 126 {
					goto st48
				}
			case data[p] >= 97:
				goto tr78
			}
		default:
			goto st48
		}
		goto st0
	st61:
		if p++; p == pe {
			goto _test_eof61
		}
	st_case_61:
		switch data[p] {
		case 37:
			goto st58
		case 47:
			goto tr61
		case 64:
			goto st57
		case 92:
			goto tr74
		}
		switch {
		case data[p] < 65:
			switch {
			case data[p] < 36:
				if 32 <= data[p] && data[p] <= 34 {
					goto st57
				}
			case data[p] > 46:
				switch {
				case data[p] > 57:
					if 58 <= data[p] && data[p] <= 62 {
						goto st57
					}
				case data[p] >= 48:
					goto st62
				}
			default:
				goto st57
			}
		case data[p] > 70:
			switch {
			case data[p] < 97:
				switch {
				case data[p] > 90:
					if 91 <= data[p] && data[p] <= 96 {
						goto st57
					}
				case data[p] >= 71:
					goto tr73
				}
			case data[p] > 102:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st57
					}
				case data[p] >= 103:
					goto tr73
				}
			default:
				goto tr80
			}
		default:
			goto tr80
		}
		goto st0
	st62:
		if p++; p == pe {
			goto _test_eof62
		}
	st_case_62:
		switch data[p] {
		case 47:
			goto tr61
		case 92:
			goto tr61
		}
		switch {
		case data[p] < 71:
			switch {
			case data[p] > 57:
				if 65 <= data[p] && data[p] <= 70 {
					goto tr70
				}
			case data[p] >= 48:
				goto st56
			}
		case data[p] > 90:
			switch {
			case data[p] > 102:
				if 103 <= data[p] && data[p] <= 122 {
					goto tr75
				}
			case data[p] >= 97:
				goto tr70
			}
		default:
			goto tr75
		}
		goto st0
	tr80:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st63
	st63:
		if p++; p == pe {
			goto _test_eof63
		}
	st_case_63:
//line parser.go:1374
		switch data[p] {
		case 47:
			goto tr61
		case 58:
			goto st5
		case 92:
			goto tr61
		}
		switch {
		case data[p] < 71:
			switch {
			case data[p] > 57:
				if 65 <= data[p] && data[p] <= 70 {
					goto tr70
				}
			case data[p] >= 48:
				goto st56
			}
		case data[p] > 90:
			switch {
			case data[p] > 102:
				if 103 <= data[p] && data[p] <= 122 {
					goto tr75
				}
			case data[p] >= 97:
				goto tr70
			}
		default:
			goto tr75
		}
		goto st0
	tr71:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st64
	tr143:
//line parser.rl:27

		u.Host = data[host_mark:p]

//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st64
	st64:
		if p++; p == pe {
			goto _test_eof64
		}
	st_case_64:
//line parser.go:1435
		switch data[p] {
		case 35:
			goto tr51
		case 37:
			goto st66
		case 47:
			goto tr61
		case 63:
			goto tr52
		case 91:
			goto st65
		}
		switch {
		case data[p] < 93:
			switch {
			case data[p] > 64:
				if 65 <= data[p] && data[p] <= 92 {
					goto tr83
				}
			case data[p] >= 32:
				goto st65
			}
		case data[p] > 96:
			switch {
			case data[p] > 122:
				if 123 <= data[p] && data[p] <= 126 {
					goto st65
				}
			case data[p] >= 97:
				goto tr83
			}
		default:
			goto st65
		}
		goto st0
	tr83:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st65
	st65:
		if p++; p == pe {
			goto _test_eof65
		}
	st_case_65:
//line parser.go:1486
		switch data[p] {
		case 35:
			goto tr51
		case 47:
			goto tr78
		case 63:
			goto tr52
		case 91:
			goto st48
		}
		switch {
		case data[p] < 93:
			switch {
			case data[p] > 64:
				if 65 <= data[p] && data[p] <= 92 {
					goto tr78
				}
			case data[p] >= 32:
				goto st48
			}
		case data[p] > 96:
			switch {
			case data[p] > 122:
				if 123 <= data[p] && data[p] <= 126 {
					goto st48
				}
			case data[p] >= 97:
				goto tr78
			}
		default:
			goto st48
		}
		goto st0
	st66:
		if p++; p == pe {
			goto _test_eof66
		}
	st_case_66:
		switch data[p] {
		case 35:
			goto tr51
		case 47:
			goto tr78
		case 63:
			goto tr52
		case 91:
			goto st48
		}
		switch {
		case data[p] < 71:
			switch {
			case data[p] < 48:
				if 32 <= data[p] && data[p] <= 46 {
					goto st48
				}
			case data[p] > 57:
				switch {
				case data[p] > 64:
					if 65 <= data[p] && data[p] <= 70 {
						goto tr85
					}
				case data[p] >= 58:
					goto st48
				}
			default:
				goto st67
			}
		case data[p] > 92:
			switch {
			case data[p] < 97:
				if 93 <= data[p] && data[p] <= 96 {
					goto st48
				}
			case data[p] > 102:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st48
					}
				case data[p] >= 103:
					goto tr78
				}
			default:
				goto tr85
			}
		default:
			goto tr78
		}
		goto st0
	tr85:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}

//line parser.rl:10
		mark = p
		goto st67
	st67:
		if p++; p == pe {
			goto _test_eof67
		}
	st_case_67:
//line parser.go:1591
		switch data[p] {
		case 35:
			goto tr51
		case 63:
			goto tr52
		}
		switch {
		case data[p] < 65:
			switch {
			case data[p] < 48:
				if 32 <= data[p] && data[p] <= 47 {
					goto st48
				}
			case data[p] > 57:
				if 58 <= data[p] && data[p] <= 64 {
					goto st48
				}
			default:
				goto st65
			}
		case data[p] > 70:
			switch {
			case data[p] < 97:
				if 71 <= data[p] && data[p] <= 96 {
					goto st48
				}
			case data[p] > 102:
				if 103 <= data[p] && data[p] <= 126 {
					goto st48
				}
			default:
				goto st65
			}
		default:
			goto st65
		}
		goto st0
	st68:
		if p++; p == pe {
			goto _test_eof68
		}
	st_case_68:
		switch data[p] {
		case 37:
			goto st61
		case 47:
			goto tr61
		case 64:
			goto st56
		case 92:
			goto tr71
		}
		switch {
		case data[p] < 65:
			switch {
			case data[p] < 36:
				if 32 <= data[p] && data[p] <= 34 {
					goto st56
				}
			case data[p] > 46:
				switch {
				case data[p] > 57:
					if 58 <= data[p] && data[p] <= 62 {
						goto st56
					}
				case data[p] >= 48:
					goto st69
				}
			default:
				goto st56
			}
		case data[p] > 70:
			switch {
			case data[p] < 97:
				switch {
				case data[p] > 90:
					if 91 <= data[p] && data[p] <= 96 {
						goto st56
					}
				case data[p] >= 71:
					goto tr70
				}
			case data[p] > 102:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st56
					}
				case data[p] >= 103:
					goto tr70
				}
			default:
				goto tr87
			}
		default:
			goto tr87
		}
		goto st0
	tr87:
//line parser.rl:13

		if port_mark > host_mark {
			u.Port = data[port_mark:p]
		}
